devops-projects/techshop-v1/k8s/ingress/techshop-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: techshop-ingress
  namespace: techshop
spec:
  ingressClassName: nginx
  rules:
  - host: techshop.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-svc
            port:
              number: 80
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: backend-svc
            port:
              number: 5000
